[package]
name = "struple"
version = "0.1.1"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Convert structures from and to tuples"
repository = "https://github.com/veykril/struple"
documentation = "https://docs.rs/struple"
readme = "README.md"
keywords = ["tuple", "struct", "convert", "struct"]
categories = ["rust-patterns"]

[features]
default = []
big-tuples = []

[dependencies]
struple-impl = "0.1.0"

[patch."crates-io"]
struple-impl.path = "./derive"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }

[workspace]
members = ["derive"]
